build: Add support for building with newer PIN versions
The structure of PIN Makefiles has changed in recent PIN
versions. This brings our makefiles in line with what PIN expects.

--- a/.gitignore
+++ b/.gitignore
@@ -13,12 +13,14 @@ stamp-h1
 
 *.o
 *.a
+*~
 
 .deps/
 autom4te.cache/
 
 /pin/obj-*
 !/pin/Makefile.in
+/pin/makefile.rules
 
 /test/create0
 /test/create1
